<resources>
    <string name="app_name">Dreamland Manager</string>
    <string name="action_settings">Settings</string>
    <string name="status">Status</string>
    <string name="modules">Modules</string>
    <string name="applications">Apps</string>
    <string name="device_info">Device Info</string>
    <string name="text_android_version">Android %s (API %d)</string>
    <string name="text_cpu_info">%s (%s)</string>
    <string name="verified_boot_state_unknown">Verified Boot state is unknown</string>
    <string name="verified_boot_state_deactivated">Verified Boot is deactivated</string>
    <string name="verified_boot_state_active">Verified Boot is active</string>
    <string name="verified_boot_state_not_detected">No Verified Boot detected</string>
    <string name="selinux_mode_disabled">SELinux is disabled</string>
    <string name="selinux_mode_permissive">SELinux mode: permissive</string>
    <string name="selinux_mode_enforcing">SELinux mode: enforcing</string>
    <string name="about">About</string>
    <string name="app_description">Dreamland Framework(developing): A third-party Xposed framework.</string>
    <string name="about_my_blog">Visit my blog</string>
    <string name="about_join_qq_group">Join my QQ group</string>
    <string name="about_alert_qq_is_unavailable">You do not have QQ installed or the version is too low.</string>
    <string name="about_version">Manager version: %s(%d)</string>
    <string name="module_error_not_support">Not support now, please try to update it or contact its developer.</string>
    <string name="alert_app_cannot_open">This app has no main activity, so it cannot be opened.</string>
    <string name="alert_module_cannot_open">This module has no main activity, so it cannot be opened.</string>
    <string name="module_action_launch">Launch UI</string>
    <string name="module_action_info">Module info</string>
    <string name="module_action_uninstall">Uninstall</string>
    <string name="about_thanks">Credits</string>
    <string name="about_thanks_alert_content">"Thanks the origin Xposed framework's author rovo89, ART hook library SandHook's author Swift Gan, GOT hook library xhook's author iqiyi, and thanks my friends for helping me! :)   "</string>
    <string name="ok">OK</string>
    <string name="alert_wait_loading_complete">Please wait for loading to complete…</string>
    <string name="action_reboot">Reboot</string>
    <string name="action_soft_reboot">Soft reboot</string>
    <string name="action_reboot_to_recovery">Reboot to recovery</string>
    <string name="reboot_failed_alert_message">Reboot failed. Please check the following:\n\n
        Have you granted Root permissions?\n\n
If this does not resolve the issue, please use the device\'s reboot function.</string>
    <string name="reboot_failed_alert_title">Reboot failed</string>
    <string name="reboot_confirm_alert">Do you want to reboot the device now?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="app_action_launch">Launch</string>
    <string name="app_action_info">App info</string>
    <string name="app_action_force_stop">Force stop</string>
    <string name="module_state_changed_alert_content">In Dreamland framework, you ’ll also need to enable the target app and forcibly stop it in the Apps page for it to take effect. If the module acts on the system, you may need to reboot the device for it to take effect.</string>
    <string name="app_state_changed_alert_content">In Dreamland framework, enabling an application simply causes the application to load all enabled modules at the next startup, so you must enable the required modules in the Modules page and forcefully stop the application to take effect; if the application is a system application, Then you may also need to reboot the device to take effect.\n\n
     Tip: Press and hold an application item to quickly and forcibly stop the application.</string>
    <string name="install_or_update">Install/Update</string>
    <string name="uninstall">Uninstall</string>
    <string name="install_warning_title">Be careful!</string>
    <string name="install_warning_content">Currently, Dreamland framework is not stable. Installation may permanently damage your device. It is not recommended for ordinary users to install and use. \nDo you want to continue the installation?</string>
    <string name="str_continue">Continue</string>
    <string name="permission_request_rationale_title_for_install">Please grant permission</string>
    <string name="permission_request_rationale_message_for_install">We need storage permissions for download. \nGenerally, the external storage location (/sdcard/Android/&lt;package name&gt;/) that belongs to the application can be accessed without storage permissions, but some devices have privately modified this behavior, and cannot be used without storage permissions. Please grant these permissions for the app to function properly.</string>
    <string name="no">No</string>
    <string name="shell_process_normal_exit">The script exits normally.</string>
    <string name="shell_process_unexpected_exit">The script exits unexpectedly: exit code %d.</string>
    <string name="framework_state_active">Dreamland framework is active! (version %d)</string>
    <string name="framework_state_safe_mode">Dreamland framework safe mode is enabled!</string>
    <string name="framework_state_installed_but_not_active">Dreamland framework is complete installed but not active.</string>
    <string name="framework_state_broken">Dreamland framework is broken! Please re-install or uninstall framework.</string>
    <string name="framework_state_not_installed">Dreamland framework is not installed.</string>
    <string name="loading">loading…</string>
    <string name="install_issue">The device does not currently support the dreamland framework (required min android version 7.0(SDK 24) and cpu arch is arm-v7 or arm64 and ART runtime).</string>
    <string name="dex2oat_warning_alert_title">You want to compile dreamland framework core jar to oat file?</string>
    <string name="dex2oat_warning_alert_content">Compiling the core jar into an oat file can theoretically improve performance, but it is currently unstable, are you sure you want to continue?</string>
    <string name="dex2oat_running_alert">Please wait for compilation to complete …</string>
    <string name="dex2oat_success">Compilation core jar success!</string>
    <string name="dex2oat_failed">Compilation core jar failed!</string>
    <string name="previous_job_not_completed">The previous job has not been completed yet.</string>
    <string name="alert_wait_install_complete">Please wait for install/uninstall complete…</string>
    <string name="install_failed">Install/Uninstall Dreamland framework failed.</string>
    <string name="install_success">Install/Uninstall success! However, you need to reboot this device for it to take effect.</string>
    <string name="phase_checking_zip">Checking framework zip…</string>
    <string name="phase_unzipping">Unzipping framework zip…</string>
    <string name="phase_executing_script">Executing install/uninstall script…</string>
    <string name="phase_cleanup">Restoring the system state…</string>
    <string name="alert_wait_framework_download_complete">Please wait framework zip download complete…</string>
    <string name="alert_framework_zip_download_failed">Dreamland framework zip download failed.</string>
    <string name="uninstall_alert">You want to uninstall Dreamland framework? You will not be able to use the features provided by the Dreamland framework.</string>
    <string name="install_error_bad_zip">This is a bad framework zip.</string>
    <string name="error_type">"Error type: "</string>
    <string name="error_info">"Error info: "</string>
    <string name="install_error_device_not_supported">This framework zip doesn\'t support the device.</string>
    <string name="install_error_unknown_io_error">Unknown I/O error.</string>
    <string name="install_error_unknown_script_error">Unknown script error.</string>
    <string name="install_error_unknown_error">Unknown error.</string>
    <string name="install_error_framework_required_manager_too_high">This framework zip required manager version too high. Please update dreamland manager and try again.</string>
    <string name="maybe_no_root_alert">Have you granted root permission?</string>
    <string name="safe_mode">Safe mode</string>
    <string name="answer_to_qq_group_question">Answer to QQ Group question: canyie</string>
    <string name="installation_package_not_publicly_available">Installation package is not publicly available</string>
    <string name="internal_test_only">Currently, the Dreamland framework is very unstable, so it is not publicly available.\n If you want to participate in our internal test, please join our QQ group on the about page.</string>
    <string name="settings">Settings</string>
    <string name="framework">Framework</string>
    <string name="safemode_summary">If safe mode is enabled, only the core functions are enabled and no modules will be loaded.</string>
    <string name="global_mode">Global mode</string>
    <string name="global_mode_summary">Apply all enabled modules in almost all processes. You should not use this mode in most cases.</string>
    <string name="resources_hook">Resources hook (Experimental features)</string>
    <string name="resources_hook_summary">Enable experimental feature \"resources hook\". After enabling, some modules that require this feature (such as theming modules) will work.</string>
    <string name="framework_not_active">Dreamland framework is not active.</string>
    <string name="manager">Manager</string>
    <string name="restart_manager">Restart manager</string>
    <string name="module_activation_scope">Module Activation Scope</string>
    <string name="save">Save</string>
    <string name="enable_mas">Enable module activation scope</string>
    <string name="mas_alert">The \"Module Activation Scope\" mechanism can enable Xposed modules to take effect only in certain applications, but this is not absolute; modules may still affect other applications by controlling one application.</string>
    <string name="changes_saved">Your changes have been saved.</string>
    <string name="mas_exit_alert">Do you want to quit editing? Your edits will not be saved.</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="invalidate_alert_settings">Invalidate alert settings</string>
    <string name="module_error_installed_on_external">This module cannot be loaded because it\'s installed on the SD card, please move it to internal storage.</string>
    <string name="required_for_module">The app is required for the module.</string>

</resources>
