<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/status_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:rippleColor="?colorAccent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/color_active">

                        <ImageView
                            android:id="@+id/status_icon"
                            android:layout_width="84dp"
                            android:layout_height="84dp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            android:src="@drawable/ic_check_circle" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="6dp"
                        android:text="@string/app_name"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status_card"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/install_card">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/install_or_update"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:gravity="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/install_card"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/uninstall_card">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/uninstall"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:gravity="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uninstall_card"
                android:id="@+id/device_info_card" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/device_info_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_info" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/device_info_item_height">

                        <ImageView
                            android:layout_width="@dimen/small_image_width"
                            android:layout_height="@dimen/small_image_height"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_android" />

                        <Space
                            android:layout_width="30dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/device_info_android_version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="Android Version" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/device_info_item_height">

                        <ImageView
                            android:layout_width="@dimen/small_image_width"
                            android:layout_height="@dimen/small_image_height"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_phone" />

                        <Space
                            android:layout_width="32dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/device_info_device"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="Device" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/device_info_item_height">

                        <ImageView
                            android:layout_width="@dimen/small_image_width"
                            android:layout_height="@dimen/small_image_height"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_chip" />

                        <Space
                            android:layout_width="32dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/device_info_cpu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="CPU Info" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/device_info_item_height">

                        <ImageView
                            android:layout_width="@dimen/small_image_width"
                            android:layout_height="@dimen/small_image_height"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_verified" />

                        <Space
                            android:layout_width="32dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/device_info_verity_boot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="Verity Boot State" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/device_info_item_height">

                        <ImageView
                            android:layout_width="@dimen/small_image_width"
                            android:layout_height="@dimen/small_image_height"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_selinux" />

                        <Space
                            android:layout_width="32dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/device_info_selinux_mode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                            tools:text="SELinux State" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@id/device_info_card"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>